# OS_LABS

lab_1/: build.sh  config.cfg  config.h  daemon.cpp  daemon.h  main.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/conn/: conn_fifo.cpp  conn_sock.cpp
lab_2/host/: host.cpp  host.hpp
lab_3/: CMakeLists.txt  README.md  build.sh
lab_3/src/: main.cpp
